# autobin

./: .gitignore  AutoBin.spec  FrameX.spec  LICENSE  README.md  build_app.sh  extract_iframes.py  main.py  pyproject.toml  requirements.txt
assets/: AutoBin.icns
core/: frames.py  llm.py  multicam.py  resolve_export.py  schemas.py  token_budget.py  transcribe.py
gui/: filmstrip.py  main_window.py  metadata_panel.py  orchestrator.py  progress_panel.py  queue_panel.py  settings_panel.py  setup_wizard.py  workers.py
