[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobin"
version = "0.1.0"
description = "Local-first video logging pipeline for DaVinci Resolve. Extracts I-frames, transcribes audio, classifies clips with a local Vision LLM, and exports metadata as CSV."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Justin Estrada"},
]
keywords = ["video", "davinci-resolve", "vlm", "whisper", "metadata", "logging", "documentary", "autobin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "opencv-python-headless>=4.8",
    "scikit-image>=0.21",
    "numpy>=1.24",
    "pydantic>=2.0",
    "PySide6>=6.6",
    "requests>=2.31",
]

[project.optional-dependencies]
mlx = [
    "mlx-whisper>=0.1",
]
faster-whisper = [
    "faster-whisper>=1.0",
]

[project.urls]
Homepage = "https://github.com/Justrada/autobin"
Issues = "https://github.com/Justrada/autobin/issues"

[project.scripts]
autobin = "main:main"

[project.gui-scripts]
autobin-gui = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "gui*"]
